--- a/web/主要故事.html
+++ b/web/主要故事.html
@@ -29,6 +29,6 @@ body {
     </tr>
   </tbody>
 </table>
-<p><span style="font-size: 16px; font-family: Cambria, 'Hoefler Text', 'Liberation Serif', Times, 'Times New Roman', serif; font-style: italic; font-weight: bolder; color: #000000;">&nbsp;<a href="index.html">点击此处回到主页</a></span></p>
+<p><span style="font-size: 16px; font-family: Cambria, 'Hoefler Text', 'Liberation Serif', Times, 'Times New Roman', serif; font-style: italic; font-weight: bolder; color: #000000;">&nbsp;<a href="https://chenbaizhi12345.github.io/bz/">点击此处回到主页</a></span></p>
 </body>
 </html>
