--- a/web/经典台词.html
+++ b/web/经典台词.html
@@ -22,7 +22,7 @@
 <p><img src="./image/p20.webp" alt=""/></p>
 <h2>&nbsp;5. 关于音乐与生活：</h2>
 <p>“音乐不仅是我的工作，也是生活。”体现了主人公对音乐的热爱，以及音乐在其生命中的重要意义.</p>
-<p>&nbsp;<a href="index.html">点击此处回到主页</a></p>
+<p>&nbsp;<a href="https://chenbaizhi12345.github.io/bz/">点击此处回到主页</a></p>
 <p>&nbsp;</p>
 </body>
 </html>
