--- a/web/首页.html
+++ b/web/首页.html
@@ -46,6 +46,6 @@
     </tr>
   </tbody>
 </table>
-<a href="index.html"> 点击此处回到主页</a>
+<a href="https://chenbaizhi12345.github.io/bz/"> 点击此处回到主页</a>
 </body>
 </html>
