--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ a:hover {
       <td width="800" colspan="4" bgcolor="#3D32E4"><img src="image/p9.jpg" width="1200" height="670" alt=""/></td>
     </tr>
     <tr style="font-size: 24px">
-      <td height="40" align="center" bgcolor="#564DE0">&nbsp;<a href="https://chenbaizhi12345.github.io/bz/%E9%A6%96%E9%A1%B5.html">首页&nbsp;&nbsp;</a>&nbsp;</td>
-      <td align="center" bgcolor="#564DE0">&nbsp;<a href="https://chenbaizhi12345.github.io/bz/%E4%B8%BB%E8%A6%81%E6%95%85%E4%BA%8B.html">主要故事</a></td>
-      <td align="center" bgcolor="#564DE0">&nbsp;<a href="https://chenbaizhi12345.github.io/bz/%E4%B8%BB%E8%A6%81%E4%BA%BA%E7%89%A9.html">主要人物</a></td>
+      <td height="40" align="center" bgcolor="#564DE0">&nbsp;<a href="./web/首页.html">首页&nbsp;&nbsp;</a>&nbsp;</td>
+      <td align="center" bgcolor="#564DE0">&nbsp;<a href="./web/主要故事.html">主要故事</a></td>
+      <td align="center" bgcolor="#564DE0">&nbsp;<a href="./web/主要人物.html">主要人物</a></td>
       <td align="center" bgcolor="#564DE0"><a href="./web/经典台词.html">经典台词</a><a>&nbsp;</a></td>
     </tr>
     <tr> </tr>
