--- a/web/主要故事.html
+++ b/web/主要故事.html
@@ -24,7 +24,7 @@ body {
         <p>&nbsp;米格在这里遇到了已故的曾曾祖母以及其他逝去的亲人们，他们想帮助米格返回人间。而返回人间的唯一方法就是得到亲人的祝福。但是曾曾祖母却提出了要他放弃音乐的要求，不然就不给他祝福。而他只有24个小时的机会。挣扎的米格想到了不用放弃梦想的方法，那就是找到已经变成亡灵的曾曾祖父德拉库斯。他相信曾经为了音乐离开家的曾曾祖父是不会让他放弃梦想的。</p>
         <p><span style="font-size: 24px; font-style: italic;">结局</span>：</p>
         <p>回到人世间的米格赶去见到了已经垂暮的太奶奶。此时的太奶奶可可已经不记得她的爸爸了，昏昏欲睡，垂垂老矣。这就意味着曾曾祖父埃克托要彻底地消失了。为了唤起太奶奶的回忆，米格含泪弹起她父亲写给可可的歌，听到歌声的她眼睛也有了光，渐渐恢复知觉，慢慢的跟着一起轻轻合唱。</p>
-        <p><img src="./image/p24.webp" alt=""/></p>
+        <p><img src="../image/p24.webp" alt=""/></p>
 <p>&nbsp;这是她小时候最爱的音乐，老人家的回忆渐渐苏醒，缓缓的睁开眼，跟着一起唱“Remember me when I am gone away,Gone far away into the silent land”的时候，从抽屉里拿出被撕掉的照片一角，米格赶紧将之与供奉的照片一拼，原来，照片上的人就是埃克托！太奶奶也认出了他，不停地喊“爸爸，爸爸！”这样，曾曾祖父就不会因为没有人记起而彻底消失了。并且，以后每年的亡灵节，都可以回来与家人“团聚”。而且米格尔也可以自由的为梦想而歌唱了。</p></td>
     </tr>
   </tbody>
